--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Home Work 11</title>
+    <div class="container-fluid no-gutter">
+      <div class="banner">
+        <div class="container no-gutter">
+          //= html/header.html
+        </div>
+      </div>
+      <div class="section__wrapper">
+        //= html/main.html //= html/footer.html
+      </div>
+    </div>
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
@@ -12,23 +22,16 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/styles.min.css" />
-   
   </head>
   <body>
     <div class="container-fluid no-gutter">
       <div class="banner">
         <div class="container no-gutter">
-         
-           //= html/header.html
-
-
+          //= html/header.html
         </div>
       </div>
       <div class="section__wrapper">
-        
-          //= html/main.html
-
-          //= html/footer.html
+        //= html/main.html //= html/footer.html
       </div>
     </div>
   </body>
